Add version to job name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ workflows:
           - equal: [ "", <<pipeline.parameters.version>> ]
     jobs:
       - build-npm-packages:
+          name: Build NPM packages <<pipeline.parameters.version>>
           context:
             - npm-repository-write
             - repository-read
